scrollbar and curser fix

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -31,7 +31,13 @@
     
 }
 
-
+html {
+    cursor: none;
+  }
+  
+  ::-webkit-scrollbar {
+    display: none;
+  }
 
 /* *{
     box-sizing: border-box;
